infra/k8s/ingress/ingress.yaml
# Notes
# Before applying, follow https://aws.amazon.com/blogs/opensource/network-load-balancer-nginx-ingress-controller-eks/

# Further reading:
# https://kubernetes.io/docs/concepts/services-networking/ingress/
# https://kubernetes.io/docs/concepts/services-networking/ingress-controllers/

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - # < cert host here >
      secretName: tls-secret
  rules:
    - host: # < full host here >
      http:
        paths:
          - path: /apple
            backend:
              serviceName: apple-service
              servicePort: 5678
          - path: /banana
            backend:
              serviceName: banana-service
              servicePort: 5678
